--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 -e .
 
+# Optionals
+trio
+
+# Docs
 mkdocs
 mkautodoc
 mkdocs-material
+
+# Tests & Linting
 pytest
 pytest-asyncio
+pytest-trio
 black
 autoflake
 mypy
