--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -23,5 +23,7 @@ jobs:
         run: "scripts/install"
       - name: "Run checks"
         run: "scripts/check"
+      - name: "Build package & docs"
+        run: "scripts/build"
       - name: "Run tests"
         run: "scripts/test"
