--- a/scripts/build
+++ b/scripts/build
@@ -23,5 +23,5 @@ fi
 
 set -x
 
-${PREFIX}twine upload dist/*
-${PREFIX}mkdocs gh-deploy --force
+${PREFIX}python setup.py sdist bdist_wheel
+${PREFIX}mkdocs build
