--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ max-line-length = 88
 [mypy]
 disallow_untyped_defs = True
 ignore_missing_imports = True
+plugins = trio_typing.plugin
 
 [tool:isort]
 combine_as_imports = True
