--- a/setup.cfg
+++ b/setup.cfg
@@ -8,13 +8,10 @@ ignore_missing_imports = True
 plugins = trio_typing.plugin
 
 [tool:isort]
+profile = black
 combine_as_imports = True
-force_grid_wrap = 0
-include_trailing_comma = True
 known_first_party = httpcore,tests
 known_third_party = brotli,certifi,chardet,cryptography,h11,h2,hstspreload,pytest,rfc3986,setuptools,sniffio,trio,trustme,urllib3,uvicorn
-line_length = 88
-multi_line_output = 3
 
 [tool:pytest]
 addopts = --cov-report= --cov=httpcore --cov=tests -rxXs
