Add checks to script

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ profile = black
 combine_as_imports = True
 known_first_party = httpcore,tests
 known_third_party = brotli,certifi,chardet,cryptography,h11,h2,hstspreload,pytest,rfc3986,setuptools,sniffio,trio,trustme,urllib3,uvicorn
+skip = httpcore/_sync/,tests/sync_tests/
 
 [tool:pytest]
 addopts = --cov-report= --cov=httpcore --cov=tests -rxXs
