--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ trio
 trio-typing
 
 # Docs
-mkdocs
 mkautodoc
+mkdocs
 mkdocs-material
 
 # Packaging
@@ -14,14 +14,17 @@ twine
 wheel
 
 # Tests & Linting
-pytest
-pytest-asyncio
-pytest-trio
-pytest-cov
-black
 autoflake
-mypy
+black
+flake8
+flake8-bugbear
+flake8-pie
 isort==5.*
 mitmproxy
+mypy
+pytest
+pytest-asyncio
+pytest-cov
+pytest-trio
 trustme
 uvicorn
