--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [flake8]
 ignore = W503, E203, B305
 max-line-length = 88
+exclude = httpcore/_sync,tests/sync_tests
 
 [mypy]
 disallow_untyped_defs = True
