--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [flake8]
 ignore = W503, E203, B305
 max-line-length = 88
+exclude = httpcore/_sync,tests/sync_tests
 
 [mypy]
 disallow_untyped_defs = True
@@ -12,6 +13,7 @@ profile = black
 combine_as_imports = True
 known_first_party = httpcore,tests
 known_third_party = brotli,certifi,chardet,cryptography,h11,h2,hstspreload,pytest,rfc3986,setuptools,sniffio,trio,trustme,urllib3,uvicorn
+skip = httpcore/_sync/,tests/sync_tests/
 
 [tool:pytest]
 addopts = --cov-report= --cov=httpcore --cov=tests -rxXs
