Allow untyped test functions

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,10 @@ disallow_untyped_defs = True
 ignore_missing_imports = True
 plugins = trio_typing.plugin
 
+[mypy-tests.*]
+disallow_untyped_defs = False
+check_untyped_defs = True
+
 [tool:isort]
 profile = black
 combine_as_imports = True
