--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,101 @@
--e .[http2]
-
-# Optionals
-trio==0.16.0
-trio-typing==0.5.0
-
-# Docs
-mkautodoc==0.1.0
-mkdocs==1.1.2
-mkdocs-material==5.5.6
-
-# Packaging
-twine==3.2.0
-wheel==0.35.1
-
-# Tests & Linting
+appdirs==1.4.4
+async-generator==1.10
+attrs==19.3.0
 autoflake==1.3.1
 black==19.10b0
+bleach==3.1.5
+blinker==1.4
+Brotli==1.0.7
+certifi==2020.6.20
+cffi==1.14.2
+chardet==3.0.4
+click==7.1.2
+colorama==0.4.3
+coverage==5.2.1
+cryptography==2.9.2
+docutils==0.16
 flake8==3.8.3
 flake8-bugbear==20.1.4
 flake8-pie==0.5.0
+Flask==1.1.2
+future==0.18.2
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+httptools==0.1.1
+hyperframe==5.2.0
+idna==2.10
+iniconfig==1.0.1
 isort==5.4.2
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==0.16.0
+kaitaistruct==0.8
+keyring==21.3.0
+ldap3==2.7
+livereload==2.6.2
+lunr==0.5.8
+Markdown==3.2.2
+MarkupSafe==1.1.1
+mccabe==0.6.1
 mitmproxy==5.2
+mkautodoc==0.1.0
+mkdocs==1.1.2
+mkdocs-material==5.5.7
+mkdocs-material-extensions==1.0
+more-itertools==8.4.0
 mypy==0.782
+mypy-extensions==0.4.3
+nltk==3.5
+outcome==1.0.1
+packaging==20.4
+passlib==1.7.2
+pathspec==0.8.0
+pkginfo==1.5.0.1
+pluggy==0.13.1
+protobuf==3.11.3
+publicsuffix2==2.20191221
+py==1.9.0
+pyasn1==0.4.8
+pycodestyle==2.6.0
+pycparser==2.20
+pyflakes==2.2.0
+Pygments==2.6.1
+pymdown-extensions==8.0
+pyOpenSSL==19.1.0
+pyparsing==2.4.7
+pyperclip==1.8.0
 pytest==6.0.1
 pytest-asyncio==0.14.0
 pytest-cov==2.10.1
 pytest-trio==0.6.0
+PyYAML==5.3.1
+readme-renderer==26.0
+regex==2020.7.14
+requests==2.24.0
+requests-toolbelt==0.9.1
+rfc3986==1.4.0
+ruamel.yaml==0.16.10
+ruamel.yaml.clib==0.2.0
+six==1.15.0
+sniffio==1.1.0
 sortedcontainers==2.1.0
+toml==0.10.1
+tornado==6.0.4
+tqdm==4.48.2
+trio==0.16.0
+trio-typing==0.5.0
 trustme==0.6.0
+twine==3.2.0
+typed-ast==1.4.1
+typing-extensions==3.7.4.2
+urllib3==1.25.10
+urwid==2.0.1
 uvicorn==0.11.8
+uvloop==0.14.0
+webencodings==0.5.1
+websockets==8.1
+Werkzeug==1.0.1
+wsproto==0.15.0
+zstandard==0.13.0
+-e .[http2]
