--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ twine
 wheel
 
 # Tests & Linting
+anyio >= 2.0.0rc2
 autoflake
 black==20.8b1
 flake8
@@ -24,8 +25,6 @@ isort==5.*
 mitmproxy
 mypy
 pytest
-pytest-asyncio
 pytest-cov
-pytest-trio
 trustme
 uvicorn
