--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@
 trio==0.16.0
 trio-typing==0.5.0
 curio==1.4
+PySocks==1.7.*
 
 # Docs
 mkautodoc==0.1.0
@@ -30,3 +31,4 @@ pytest==6.0.2
 pytest-cov==2.10.1
 trustme==0.6.0
 uvicorn==0.11.8
+pproxy==2.3.5
