--- a/requirements.txt
+++ b/requirements.txt
@@ -23,10 +23,10 @@ black==20.8b1
 flake8==3.8.3
 flake8-bugbear==20.1.4
 flake8-pie==0.6.1
+hypercorn==0.10.2
 isort==5.5.2
 mitmproxy==5.2
 mypy==0.782
 pytest==6.0.2
 pytest-cov==2.10.1
 trustme==0.6.0
-uvicorn==0.11.8
