--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ black==20.8b1
 flake8==3.8.3
 flake8-bugbear==20.1.4
 flake8-pie==0.6.1
-hypercorn==0.10.2
+hypercorn==0.10.2; python_version >= '3.7'
 isort==5.5.2
 mitmproxy==5.2
 mypy==0.782
