Migrate http proxy tests to pproxy (#199)
* Replaced mitmproxy by pproxy for proxy tests

* Rebased onto master branch HEAD.

Removed unused fixtures.

Co-authored-by: Florimond Manca <florimond.manca@gmail.com>

* Apply suggestions from code review

Co-authored-by: Florimond Manca <florimond.manca@gmail.com>

* Apply suggestions from code review

Co-authored-by: Florimond Manca <florimond.manca@gmail.com>

Co-authored-by: Florimond Manca <florimond.manca@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,10 +22,9 @@ flake8==3.8.4
 flake8-bugbear==20.1.4
 flake8-pie==0.6.1
 isort==5.5.4
-mitmproxy==5.2
 mypy==0.782
+pproxy==2.3.5
 pytest==6.1.0
 pytest-trio==0.6.0
 pytest-cov==2.10.1
-trustme==0.6.0
 uvicorn==0.12.1
