--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ wheel==0.35.1
 anyio==2.0.2
 autoflake==1.4
 black==20.8b1
+coverage==5.3
 flake8==3.8.4
 flake8-bugbear==20.1.4
 flake8-pie==0.6.1
@@ -26,5 +27,4 @@ mypy==0.782
 pproxy==2.3.7
 pytest==6.1.1
 pytest-trio==0.6.0
-pytest-cov==2.10.1
 uvicorn==0.12.1
