--- a/requirements.txt
+++ b/requirements.txt
@@ -22,9 +22,11 @@ coverage==5.3
 flake8==3.8.4
 flake8-bugbear==20.1.4
 flake8-pie==0.6.1
+hypercorn==0.11.1; python_version >= '3.7'
 isort==5.6.4
 mypy==0.790
 pproxy==2.3.7
 pytest==6.1.2
 pytest-trio==0.7.0
+trustme==0.6.0
 uvicorn==0.12.1
