--- a/requirements.txt
+++ b/requirements.txt
@@ -28,5 +28,6 @@ mypy==0.790
 pproxy==2.3.7
 pytest==6.1.2
 pytest-trio==0.7.0
+pytest-asyncio==0.14.0
 trustme==0.6.0
 uvicorn==0.12.1; python_version < '3.7'
