--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ trio-typing==0.5.0
 curio==1.4
 
 # Docs
-mkautodoc==0.1.0
-mkdocs==1.1.2
-mkdocs-material==6.1.6
+sphinx==3.5.3
+sphinx-autobuild==2021.3.14
+myst-parser==0.13.5
+furo==2021.3.20b30
+ghp-import==1.1.0
 
 # Packaging
 twine==3.2.0
