--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ curio==1.4
 # Docs
 sphinx==3.5.3
 sphinx-autobuild==2021.3.14
+sphinx-autodoc-typehints==1.11.1
 myst-parser==0.13.5
 furo==2021.3.20b30
 ghp-import==1.1.0
