--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ sphinx-autobuild==2021.3.14
 myst-parser==0.13.5
 furo==2021.3.20b30
 ghp-import==1.1.0
+# myst-parser + docutils==0.17 has a bug: https://github.com/executablebooks/MyST-Parser/issues/343
+docutils==0.16
 
 # Packaging
 twine==3.4.1
