configure strict pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,9 +20,10 @@ known_third_party = brotli,certifi,chardet,cryptography,h11,h2,hstspreload,pytes
 skip = httpcore/_sync/,tests/_sync
 
 [tool:pytest]
-addopts = -rxXs
+addopts = -rxXs --strict-config --strict-markers
 markers =
   copied_from(source, changes=None): mark test as copied from somewhere else, along with a description of changes made to accodomate e.g. our test setup
+filterwarnings = error
 
 [coverage:run]
 omit = venv/*, httpcore/_sync/*, httpcore/_compat.py
