--- a/requirements.txt
+++ b/requirements.txt
@@ -20,8 +20,7 @@ twine==3.4.1
 wheel==0.36.2
 
 # Tests & Linting
-# https://github.com/agronholm/anyio/pull/309
-anyio @ git+https://github.com/agronholm/anyio.git@9ae936079d407223a899c635b6cc859a64bc0124
+anyio~=3.2
 autoflake==1.4
 black==21.5b2
 coverage==5.5
