Treat warnings as error

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,9 @@ skip = httpcore/_sync/,tests/sync_tests/
 
 [tool:pytest]
 addopts = -rxXs
+filterwarnings =
+  error
+  ignore:::hypercorn
 markers =
   copied_from(source, changes=None): mark test as copied from somewhere else, along with a description of changes made to accodomate e.g. our test setup
 
