Use ssl_config fixture

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ skip = httpcore/_sync/,tests/sync_tests/
 addopts = -rxXs
 filterwarnings =
   error
-  ignore:::hypercorn
+  default:::hypercorn
 markers =
   copied_from(source, changes=None): mark test as copied from somewhere else, along with a description of changes made to accodomate e.g. our test setup
 
