ignore current warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,13 @@ skip = httpcore/_sync/,tests/sync_tests/
 addopts = -rxXs --strict-config --strict-markers
 markers =
   copied_from(source, changes=None): mark test as copied from somewhere else, along with a description of changes made to accodomate e.g. our test setup
-filterwarnings = error
+filterwarnings =
+    error
+    # https://gitlab.com/pgjones/hypercorn/-/issues/194
+    ignore:ssl\.OP_NO_SSL\*/ssl\.OP_NO_TLS\* options are deprecated:DeprecationWarning
+    # https://github.com/encode/httpcore/issues/384
+    ignore:ssl\.SSLContext\(\) without protocol argument is deprecated\.:DeprecationWarning
+    ignore:ssl.PROTOCOL_TLS is deprecated:DeprecationWarning
 
 [coverage:run]
 omit = venv/*
