--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ curio==1.4; python_version < '3.7'
 curio==1.5; python_version >= '3.7'
 
 # Docs
-sphinx==4.1.2
+sphinx @ https://github.com/sphinx-doc/sphinx/archive/03bf83365eb7a5180e93a3ccd5c050f5da36c489.tar.gz
 sphinx-autobuild==2021.3.14
 myst-parser==0.15.1
 furo==2021.7.31b41
