--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ curio==1.5; python_version >= '3.7'
 
 # Docs
 # https://github.com/sphinx-doc/sphinx/issues/9505
-sphinx @ https://github.com/sphinx-doc/sphinx/archive/03bf83365eb7a5180e93a3ccd5c050f5da36c489.tar.gz; python_version >= '3.10
+sphinx @ https://github.com/sphinx-doc/sphinx/archive/03bf83365eb7a5180e93a3ccd5c050f5da36c489.tar.gz; python_version >= '3.10'
 sphinx==4.1.2; python_version < '3.10'
 sphinx-autobuild==2021.3.14
 myst-parser==0.15.1
