--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 ignore = W503, E203, B305
-max-line-length = 88
-exclude = httpcore/_sync,tests/sync_tests
+max-line-length = 120
+exclude = httpcore/_sync,tests/_sync
 
 [mypy]
 disallow_untyped_defs = True
@@ -17,7 +17,7 @@ profile = black
 combine_as_imports = True
 known_first_party = httpcore,tests
 known_third_party = brotli,certifi,chardet,cryptography,h11,h2,hstspreload,pytest,rfc3986,setuptools,sniffio,trio,trustme,urllib3,uvicorn
-skip = httpcore/_sync/,tests/sync_tests/
+skip = httpcore/_sync/,tests/_sync
 
 [tool:pytest]
 addopts = -rxXs
@@ -25,5 +25,5 @@ markers =
   copied_from(source, changes=None): mark test as copied from somewhere else, along with a description of changes made to accodomate e.g. our test setup
 
 [coverage:run]
-omit = venv/*
+omit = venv/*, httpcore/_sync/*, httpcore/_compat.py
 include = httpcore/*, tests/*
