--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ isort==5.9.3
 mypy==0.910
 pproxy==2.7.8
 pytest==6.2.5
+pytest-httpbin==1.0.0
 pytest-trio==0.7.0
 pytest-asyncio==0.15.1
 trustme==0.9.0
