--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,11 @@ curio==1.4; python_version < '3.7'
 curio==1.5; python_version >= '3.7'
 
 # Docs
-# https://github.com/sphinx-doc/sphinx/issues/9505
-sphinx @ https://github.com/sphinx-doc/sphinx/archive/03bf83365eb7a5180e93a3ccd5c050f5da36c489.tar.gz; python_version >= '3.10'
-sphinx==4.1.2; python_version < '3.10'
-sphinx-autobuild==2021.3.14
-myst-parser==0.15.2
-furo==2021.10.9
-ghp-import==2.0.2
-# myst-parser + docutils==0.17 has a bug: https://github.com/executablebooks/MyST-Parser/issues/343
-docutils==0.17.1
+mkdocs==1.2.2
+mkdocs-autorefs==0.3.0
+mkdocs-material==7.3.0
+mkdocs-material-extensions==1.0.3
+mkdocstrings==0.16.1
 
 # Packaging
 twine==3.4.2
