--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,9 @@ skip = httpcore/_sync/,tests/_sync
 addopts = -rxXs --strict-config --strict-markers
 markers =
   copied_from(source, changes=None): mark test as copied from somewhere else, along with a description of changes made to accodomate e.g. our test setup
-filterwarnings = error
+filterwarnings =
+    error
+    ignore:unclosed <ssl.SSLSocket .*:ResourceWarning
 
 [coverage:run]
 omit = venv/*, httpcore/_sync/*, httpcore/_compat.py
