ignore socket ResourceWarning

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ markers =
   copied_from(source, changes=None): mark test as copied from somewhere else, along with a description of changes made to accodomate e.g. our test setup
 filterwarnings =
     error
-    ignore:unclosed <ssl.SSLSocket .*:ResourceWarning
+    ignore:unclosed <(socket\.socket|ssl\.SSLSocket) .*:ResourceWarning
 
 [coverage:run]
 omit = venv/*, httpcore/_sync/*, httpcore/_compat.py
