ignore ssl.wrap_socket deprecation warning

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ markers =
 filterwarnings =
     error
     ignore:unclosed <(socket\.socket|ssl\.SSLSocket) .*:ResourceWarning
+    ignore:ssl\.wrap_socket\(\) is deprecated, use SSLContext\.wrap_socket\(\):DeprecationWarning
 
 [coverage:run]
 omit = venv/*, httpcore/_sync/*, httpcore/_compat.py
