--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ filterwarnings =
     error
     ignore:unclosed <(socket\.socket|ssl\.SSLSocket) .*:ResourceWarning
     ignore:ssl\.wrap_socket\(\) is deprecated, use SSLContext\.wrap_socket\(\):DeprecationWarning
+    ignore:ssl\.PROTOCOL_TLS is deprecated:DeprecationWarning
 
 [coverage:run]
 omit = venv/*, httpcore/_sync/*, httpcore/_compat.py
