--- a/setup.cfg
+++ b/setup.cfg
@@ -19,9 +19,14 @@ known_third_party = brotli,certifi,chardet,cryptography,h11,h2,hstspreload,pytes
 skip = httpcore/_sync/,tests/_sync
 
 [tool:pytest]
-addopts = -rxXs
+addopts = -rxXs --strict-config --strict-markers
 markers =
   copied_from(source, changes=None): mark test as copied from somewhere else, along with a description of changes made to accodomate e.g. our test setup
+filterwarnings =
+    error
+    ignore:unclosed <(socket\.socket|ssl\.SSLSocket) .*:ResourceWarning
+    ignore:ssl\.wrap_socket\(\) is deprecated, use SSLContext\.wrap_socket\(\):DeprecationWarning
+    ignore:ssl\.PROTOCOL_TLS is deprecated:DeprecationWarning
 
 [coverage:run]
 omit = venv/*, httpcore/_sync/*, httpcore/_compat.py
