Switch to explicit `typing.Optional` for type hints Fixes #512

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,8 @@ exclude = httpcore/_sync,tests/_sync
 [mypy]
 disallow_untyped_defs = True
 ignore_missing_imports = True
+no_implicit_optional = True
+show_error_codes = True
 
 [mypy-tests.*]
 disallow_untyped_defs = False
