--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,7 @@ max-line-length = 120
 exclude = httpcore/_sync,tests/_sync
 
 [mypy]
-disallow_untyped_defs = True
-ignore_missing_imports = True
-no_implicit_optional = True
+strict = True
 show_error_codes = True
 
 [mypy-tests.*]
