Ignore third party libs that don't have types

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,21 @@ exclude = httpcore/_sync,tests/_sync
 strict = True
 show_error_codes = True
 
+[mypy-async_generator.*]
+ignore_missing_imports = True
+
+[mypy-h2.*]
+ignore_missing_imports = True
+
+[mypy-h11.*]
+ignore_missing_imports = True
+
+[mypy-hpack.*]
+ignore_missing_imports = True
+
+[mypy-trio.*]
+ignore_missing_imports = True
+
 [mypy-tests.*]
 disallow_untyped_defs = False
 check_untyped_defs = True
