Fix CI for Python 3.6

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,9 @@ exclude = httpcore/_sync,tests/_sync
 strict = True
 show_error_codes = True
 
+[mypy-httpcore._sync.interfaces]
+warn_unused_ignores = False
+
 [mypy-async_generator.*]
 ignore_missing_imports = True
 
