Add python_version to mypy config file

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ max-line-length = 120
 exclude = httpcore/_sync,tests/_sync
 
 [mypy]
+python_version = 3.6
 strict = True
 show_error_codes = True
 
