Add mypy error codes to bare `type: ignore` comments

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,9 @@ show_error_codes = True
 [mypy-httpcore._sync.interfaces]
 warn_unused_ignores = False
 
+[mypy-certifi.*]
+ignore_missing_imports = True
+
 [mypy-async_generator.*]
 ignore_missing_imports = True
 
