Remove Python 3.6 related code

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,5 +31,5 @@ filterwarnings =
     ignore:ssl\.PROTOCOL_TLS is deprecated:DeprecationWarning
 
 [coverage:run]
-omit = venv/*, httpcore/_sync/*, httpcore/_compat.py
+omit = venv/*, httpcore/_sync/*
 include = httpcore/*, tests/*
