--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ flake8==3.9.2
 isort==5.10.1
 mypy==0.931
 pytest==7.0.1
-pytest-httpbin==1.0.2
+pytest-httpbin==1.0.1
 pytest-trio==0.7.0
 pytest-asyncio==0.16.0
+werkzeug<2.1  # See: https://github.com/postmanlabs/httpbin/issues/673
