--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ anyio==3.5.0
 autoflake==1.4
 black==22.3.0
 coverage==6.2
-flake8==3.9.2
+flake8==3.9.2  # See: https://github.com/PyCQA/flake8/pull/1438
 isort==5.10.1
 mypy==0.931
 pytest==7.0.1
