--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,4 @@ pytest-httpbin==1.0.1
 pytest-trio==0.7.0
 pytest-asyncio==0.16.0
 werkzeug<2.1  # See: https://github.com/postmanlabs/httpbin/issues/673
+typing_extensions==4.2.0
