--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ mkdocs==1.3.0
 mkdocs-autorefs==0.3.1
 mkdocs-material==8.3.6
 mkdocs-material-extensions==1.0.3
-mkdocstrings==0.19.0
+mkdocstrings[python-legacy]==0.19.0
 jinja2==3.1.2
 
 # Packaging
