--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ black==22.8.0
 coverage==6.4.4
 flake8==3.9.2  # See: https://github.com/PyCQA/flake8/pull/1438
 isort==5.10.1
+importlib-metadata==4.13.0
 mypy==0.971
 pytest==7.1.3
 pytest-httpbin==2.0.0rc1
