--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ disallow_untyped_defs = True
 ignore_missing_imports = True
 no_implicit_optional = True
 show_error_codes = True
+warn_unused_ignores = True
 
 [mypy-tests.*]
 disallow_untyped_defs = False
