--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ ignore_missing_imports = True
 no_implicit_optional = True
 show_error_codes = True
 warn_unused_ignores = True
+disallow_untyped_calls = True
 
 [mypy-tests.*]
 disallow_untyped_defs = False
