--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ no_implicit_optional = True
 show_error_codes = True
 warn_unused_ignores = True
 disallow_untyped_calls = True
+warn_return_any = True
 
 [mypy-tests.*]
 disallow_untyped_defs = False
