Enable mypy option `--disallow-any-generics`

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ show_error_codes = True
 warn_unused_ignores = True
 disallow_untyped_calls = True
 warn_return_any = True
+disallow_any_generics = True
 
 [mypy-tests.*]
 disallow_untyped_defs = False
