Enable mypy option `--strict`

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,14 +4,9 @@ max-line-length = 120
 exclude = httpcore/_sync,tests/_sync
 
 [mypy]
-disallow_untyped_defs = True
+strict = True
 ignore_missing_imports = True
-no_implicit_optional = True
 show_error_codes = True
-warn_unused_ignores = True
-disallow_untyped_calls = True
-warn_return_any = True
-disallow_any_generics = True
 
 [mypy-tests.*]
 disallow_untyped_defs = False
