mypy - ignore missing imports in explicit modules

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,12 +5,23 @@ exclude = httpcore/_sync,tests/_sync
 
 [mypy]
 strict = True
-ignore_missing_imports = True
 show_error_codes = True
 
 [mypy-tests.*]
 disallow_untyped_defs = False
 check_untyped_defs = True
+
+[mypy-certifi.*]
+ignore_missing_imports = True
+
+[mypy-h2.*]
+ignore_missing_imports = True
+
+[mypy-hpack.*]
+ignore_missing_imports = True
+
+[mypy-trio.*]
+ignore_missing_imports = True
 
 [tool:isort]
 profile = black
