--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,9 @@ show_error_codes = True
 disallow_untyped_defs = False
 check_untyped_defs = True
 
+[mypy-certifi.*]
+ignore_missing_imports = True
+
 [mypy-h2.*]
 ignore_missing_imports = True
 
