--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ anyio==3.6.2
 autoflake==2.0.1
 black==23.1.0
 coverage==6.5.0
+flake8==6.0.0
 isort==5.11.4
 importlib-metadata==4.13.0
 mypy==0.991
