--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,8 @@ twine
 # Tests & Linting
 anyio==3.6.2
 black==23.3.0
-coverage==7.2.7
+coverage[toml]==7.2.7
+ruff==0.0.277
 mypy==1.2.0
 trio-typing==0.8.0
 types-certifi==2021.10.8.3
