Add tests to sdist

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ include = [
     "/httpcore",
     "/CHANGELOG.md",
     "/README.md",
+    "/tests"
 ]
 
 [tool.hatch.metadata.hooks.fancy-pypi-readme]
