--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
--e .[http2,socks]
-
-# Optionals
-trio==0.21.0
+-e .[asyncio,trio,http2,socks]
 
 # Docs
 mkdocs==1.5.3
@@ -16,7 +13,6 @@ build==1.0.3
 twine
 
 # Tests & Linting
-anyio==4.0.0
 black==23.7.0
 coverage[toml]==7.3.0
 ruff==0.0.291
