--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,7 +92,10 @@ ignore_missing_imports = true
 [tool.pytest.ini_options]
 addopts = ["-rxXs", "--strict-config", "--strict-markers"]
 markers = ["copied_from(source, changes=None): mark test as copied from somewhere else, along with a description of changes made to accodomate e.g. our test setup"]
-filterwarnings = ["error"]
+filterwarnings = [
+    "error",
+    "ignore::trio.TrioDeprecationWarning",  # due to trio.MultiError deprecation
+]
 
 [tool.coverage.run]
 omit = [
