--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,6 +114,8 @@ select = [
     "I"
 ]
 
-ignore = ["E501"]
+[tool.ruff.pycodestyle]
+max-line-length = 120
+
 [tool.ruff.isort]
 combine-as-imports = true
