--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,7 +106,16 @@ exclude = [
     "httpcore/_sync",
     "tests/_sync",
 ]
-select = ["E", "F", "W", "I"]
+line-length = 88
+select = [
+    "E",
+    "F",
+    "W",
+    "I"
+]
+
+[tool.ruff.pycodestyle]
+max-line-length = 120
 
 [tool.ruff.isort]
 combine-as-imports = true
