--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,12 +104,6 @@ include = [
     "tests/*",
 ]
 
-[tool.ruff]
-exclude = [
-    "httpcore/_sync",
-    "tests/_sync",
-]
-
 [tool.ruff.lint]
 select = [
     "E",
@@ -120,3 +114,8 @@ select = [
 
 [tool.ruff.lint.isort]
 combine-as-imports = true
+
+[tool.ruff.lint.per-file-ignores]
+# needed for unasync.py
+"httpcore/_sync/*" = ["I001"]
+"tests/_sync/*" = ["I001"]
