--- a/requirements.txt
+++ b/requirements.txt
@@ -10,15 +10,14 @@ jinja2==3.1.3
 
 # Packaging
 build==1.2.1
-twine
+twine==5.0.0
 
 # Tests & Linting
 coverage[toml]==7.4.4
 ruff==0.3.4
 mypy==1.9.0
 trio-typing==0.10.0
-types-certifi==2021.10.8.3
 pytest==8.1.1
 pytest-httpbin==2.0.0
 pytest-trio==0.8.0
-werkzeug<2.1  # See: https://github.com/postmanlabs/httpbin/issues/673
+werkzeug<2.1  # See: https://github.com/psf/httpbin/issues/35
