--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,10 @@ pytest==8.2.1
 pytest-httpbin==2.0.0
 pytest-trio==0.8.0
 werkzeug<2.1  # See: https://github.com/psf/httpbin/issues/35
+
+# Benchmarking and profiling
+uvicorn==0.30.1
+aiohttp==3.9.5
+urllib3==2.2.1
+matplotlib==3.7.5
+pyinstrument==4.6.2
