--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,30 @@
 -e .[asyncio,trio,http2,socks]
 
 # Docs
-mkdocs==1.6.0
-mkdocs-autorefs==1.0.1
-mkdocs-material==9.5.27
+mkdocs==1.6.1
+mkdocs-autorefs==1.2.0
+mkdocs-material==9.5.39
 mkdocs-material-extensions==1.3.1
-mkdocstrings[python-legacy]==0.25.1
+mkdocstrings[python-legacy]==0.26.1
 jinja2==3.1.4
 
 # Packaging
-build==1.2.1
+build==1.2.2
 twine==5.1.1
 
 # Tests & Linting
-coverage[toml]==7.5.4
-ruff==0.5.0
-mypy==1.10.1
+coverage[toml]==7.6.1
+ruff==0.6.8
+mypy==1.11.2
 trio-typing==0.10.0
-pytest==8.2.2
-pytest-httpbin==2.0.0
+pytest==8.3.3
+pytest-httpbin==2.1.0
 pytest-trio==0.8.0
 werkzeug<3.1  # See: https://github.com/psf/httpbin/issues/35
 
 # Benchmarking and profiling
-uvicorn==0.30.1
-aiohttp==3.10.2
-urllib3==2.2.2
-matplotlib==3.7.5
-pyinstrument==4.6.2
+uvicorn==0.31.0
+aiohttp==3.10.8
+urllib3==2.2.3
+pyinstrument==4.7.3
+matplotlib<3.8  # Needs to bump minimum required Python to 3.9
